# waypoint_publisher

./: .gitignore  CMakeLists.txt  README.md  package.xml
action/: GetPath.action
dataset/: data_house_kobuki.csv  data_house_kobuki_05.csv  data_marsyard2020.csv  data_marsyard2020_1.csv
dataset_realtime/: house.csv  house_1.csv
launch/: waypoint_publisher.launch
maps/: map_03.11.2023_15:24:44.txt  map_03.11.2023_15:42:21.txt  map_04.11.2023_23:40:42.txt  map_22.10.2023_18:25:22.txt  map_24.12.2023_22:52:11.txt  map_25.12.2023_10:33:57.txt  map_25.12.2023_10:44:35.txt  map_25.12.2023_18:08:01.txt  map_cloud.txt  map_cloud_house.txt  map_cloud_house_05.txt  map_cloud_marsyard2020_05.txt
scripts/: empiric_eval.py  fit_model.py  pointcloud_processor.py  realtime_empiric.py  validate.py  walker.py  waypoint_publisher_node.py
scripts/waypoint_publisher/: aux.ipynb  data.ipynb  data_2.ipynb  ml.ipynb
src/: pointcloud_processor.cpp
validation/: validation.txt  walker_0.txt
